# aoc-2020

./: Cargo.toml  README.md
script/: day1.rn  day10.rn  day11.rn  day12.rn  day13.rn  day14.rn  day15.rn  day16.rn  day18.rn  day19.rn  day2.rn  day20.rn  day21.rn  day4.rn  day5.rn  day6.rn  day7.rn  day8.rn  day9.rn
src/: main.rs
