[package]
name = "aoc-2020-rune"
version = "0.1.0"
authors = ["Tom Solberg <mail@tomolsson.se>"]
edition = "2018"

[dependencies]
rune = { version = "0.14.0"}
rune-modules = { version = "0.14.0", features = ["full"]}

anyhow = "1.0.34"
notify = "4.0.15"
tokio = { version = "1.39.2", features = ["full"] }
structopt = "0.3.21"

[profile.release]
debug = true

[patch.crates-io]
rune = { path = "/home/udoprog/projects/repos/rune/crates/rune" }
rune-modules = { path = "/home/udoprog/projects/repos/rune/crates/rune-modules" }
